feat: fix names

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "t3-starter",
-  "version": "0.1.0",
+  "name": "ambientalpe-monitoring",
+  "version": "1.0.0",
   "private": true,
   "type": "module",
   "scripts": {
